fix alignment issue

--- a/sass/fontend/form.scss
+++ b/sass/fontend/form.scss
@@ -203,7 +203,7 @@
 			width: 100%;
 		}
 		&.srfm-active {
-			display: flex;
+			display: block;
 		}
 
 		.srfm-success-box-header {
